Fixed bug: forecast display alignment

--- a/src/style.css
+++ b/src/style.css
@@ -72,7 +72,8 @@ h1 {
   text-align: right;
 }
 
-.footer {
+.footer,
+.forecast {
   text-align: center;
 }
 
